JIRA-84: Introduce a new API for handling the authentication (#67)
* JIRA-83: Upgrade HttpClient to v5
* JIRA-84: Introduce a new API for handling the authentication